# tams_ur5_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: mallet.rviz  plotjuggler-pid-tuning.xml  tams_ur5_gazebo.rviz
controller/: arm_controller_ur5.yaml  gripper_controller.yaml  mallet_controller.yaml
launch/: controller_utils.launch  mallet.launch  tams_ur5_gazebo.launch  tams_ur5_setup_upload.launch
scripts/: grab_coke_can_demo.py  mallet.py  movej.py
urdf/: mallet.xacro  tams_ur5_gazebo_setup.urdf.xacro  ur5_for_gazebo.urdf.xacro
worlds/: empty.world
